--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "firebase": "^7.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "sass": "^1.25.0"
   },
   "scripts": {
